--- a/restaurant-java/src/main/resources/application.properties
+++ b/restaurant-java/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
+spring.datasource.hikari.auto-commit=false
+
